change block name

--- a/AdminLTE/center_box_layout.html.twig
+++ b/AdminLTE/center_box_layout.html.twig
@@ -14,7 +14,7 @@
     </div>
 
     <div class="center-box-body">
-      {% block center_box_body %}
+      {% block content %}
       {% endblock %}
     </div>
     <!-- /.form-box -->
