调整目录结构

--- a/AdminLTE/layout/base.html.twig
+++ b/AdminLTE/layout/base.html.twig
@@ -14,10 +14,7 @@
       <!-- Ionicons -->
       <link rel="stylesheet" href="{{ tpl_config.ionicons_assets_url|default('') }}/css/ionicons.min.css">
       <!-- Theme style -->
-      <link rel="stylesheet" href="{{ tpl_config.adminlte_assets_url|default('') }}/dist/css/AdminLTE.min.css">
-      <!-- AdminLTE Skins. Choose a skin from the css/skins
-           folder instead of downloading all of them to reduce the load. -->
-      <link rel="stylesheet" href="{{ tpl_config.adminlte_assets_url|default('') }}/dist/css/skins/_all-skins.min.css">
+      <link rel="stylesheet" href="{{ tpl_config.adminlte_assets_url|default('') }}/dist/css/AdminLTE.css">
     {% endblock %}
     {% block head_js %}{% endblock %}
   </head>
