two_column_layout

--- a/layout/base.html.twig
+++ b/layout/base.html.twig
@@ -20,7 +20,7 @@
   </head>
   {% block body %}
     <body>
-      {% block main %}{% endblock %}
+      {% block side_wrapper %}{% endblock %}
       {% block foot_js %}
         <!-- jQuery 2.2.3 -->
         <script src="{{ tpl_config.adminlte_assets_url|default('') }}/plugins/jQuery/jquery-2.2.3.min.js"></script>
