修改链接指向

--- a/layout/two_column_layout.html.twig
+++ b/layout/two_column_layout.html.twig
@@ -41,7 +41,7 @@
 
 {% block main_header %}
   <!-- Logo -->
-  <a href="../../index2.html" class="logo">
+  <a href="{{ tpl_config.adminlte_assets_url|default('') }}/index2.html" class="logo">
     <!-- mini logo for sidebar mini 50x50 pixels -->
     <span class="logo-mini"><b>A</b>LT</span>
     <!-- logo for regular state and mobile devices -->
@@ -73,7 +73,7 @@
                 <li><!-- start message -->
                   <a href="#">
                     <div class="pull-left">
-                      <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                      <img src="{{ tpl_config.adminlte_assets_url|default('') }}/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                     </div>
                     <h4>
                       Support Team
@@ -144,13 +144,13 @@
         <!-- User Account: style can be found in dropdown.less -->
         <li class="dropdown user user-menu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <img src="../../dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+            <img src="{{ tpl_config.adminlte_assets_url|default('') }}/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
             <span class="hidden-xs">Alexander Pierce</span>
           </a>
           <ul class="dropdown-menu">
             <!-- User image -->
             <li class="user-header">
-              <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+              <img src="{{ tpl_config.adminlte_assets_url|default('') }}/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
               <p>
                 Alexander Pierce - Web Developer
@@ -249,7 +249,7 @@
   <!-- Sidebar user panel -->
   <div class="user-panel">
     <div class="pull-left image">
-      <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+      <img src="{{ tpl_config.adminlte_assets_url|default('') }}/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
     </div>
     <div class="pull-left info">
       <p>Alexander Pierce</p>
@@ -278,8 +278,8 @@
         </span>
       </a>
       <ul class="treeview-menu">
-        <li><a href="../../index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-        <li><a href="../../index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+        <li><a href="{{ tpl_config.adminlte_assets_url|default('') }}/index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+        <li><a href="{{ tpl_config.adminlte_assets_url|default('') }}/index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
       </ul>
     </li>
     <li class="treeview">
@@ -433,7 +433,7 @@
         <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
       </ul>
     </li>
-    <li><a href="../../documentation/index.html"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
+    <li><a href="{{ tpl_config.adminlte_assets_url|default('') }}/documentation/index.html"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
     <li class="header">LABELS</li>
     <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
     <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
