change adminlte.css to adminlte.min.css

--- a/layout/base.html.twig
+++ b/layout/base.html.twig
@@ -14,7 +14,7 @@
       <!-- Ionicons -->
       <link rel="stylesheet" href="{{ tpl_config.ionicons_assets_url|default('') }}/css/ionicons.min.css">
       <!-- Theme style -->
-      <link rel="stylesheet" href="{{ tpl_config.adminlte_assets_url|default('') }}/dist/css/AdminLTE.css">
+      <link rel="stylesheet" href="{{ tpl_config.adminlte_assets_url|default('') }}/dist/css/AdminLTE.min.css">
     {% endblock %}
     {% block head_js %}{% endblock %}
   </head>
